// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check page main breadcrumb section against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-breadcrumb"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page main nav section against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page main subnav section against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-subnav"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page main tabs section against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-tabs"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page section with center alignment 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-limit-width pf-m-align-center"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page section with fill and no padding example against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-no-padding pf-m-fill"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page section with fill example against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-fill"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page section with limited width 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-limit-width"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page section with no fill example against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-no-fill"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Check page section with no padding example against snapshot 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-no-padding"
  >
    <div
      class="pf-v6-c-page__main-body"
    />
  </section>
</DocumentFragment>
`;

exports[`Verify page section bottom shadow 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-shadow-bottom"
  >
    <div
      class="pf-v6-c-page__main-body"
    >
      test
    </div>
  </section>
</DocumentFragment>
`;

exports[`Verify page section bottom sticky 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-sticky-bottom"
  >
    <div
      class="pf-v6-c-page__main-body"
    >
      test
    </div>
  </section>
</DocumentFragment>
`;

exports[`Verify page section overflow scroll 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-overflow-scroll"
    tabindex="0"
  >
    <div
      class="pf-v6-c-page__main-body"
    >
      test
    </div>
  </section>
</DocumentFragment>
`;

exports[`Verify page section top shadow 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-shadow-top"
  >
    <div
      class="pf-v6-c-page__main-body"
    >
      test
    </div>
  </section>
</DocumentFragment>
`;

exports[`Verify page section top sticky 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-page__main-section pf-m-sticky-top"
  >
    <div
      class="pf-v6-c-page__main-body"
    >
      test
    </div>
  </section>
</DocumentFragment>
`;
